--- a/vercel-deployFile/package.json
+++ b/vercel-deployFile/package.json
@@ -14,5 +14,8 @@
     "aws-sdk": "^2.1692.0",
     "redis": "^4.7.0",
     "typescript": "^5.8.3"
+  },
+  "devDependencies": {
+    "@types/node": "^22.14.1"
   }
 }
